# scrap

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
examples/: ffplay.rs  screenshot.rs
src/: lib.rs
src/common/: dxgi.rs  quartz.rs  x11.rs
src/dxgi/: mod.rs
src/quartz/: capturer.rs  display.rs  mod.rs
src/x11/: capturer.rs  display.rs  iter.rs  mod.rs  server.rs
