[package]
name = "scrap"
description = "Screen capture made easy."
edition = "2021"
version = "0.5.1"
repository = "https://github.com/firemeeting/scrap"
documentation = "https://docs.rs/scrap"
keywords = ["screen", "capture", "record"]
license = "MIT"
authors = ["Ram <quadrupleslap@gmail.com>", "iamazy <iamazy.me@outlook.com>"]

[dependencies]
cfg-if = "1"
libc = "0.2"
thiserror = "1"
winapi = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { git = "https://github.com/servo/core-foundation-rs", branch = "main"}
core-graphics= { git = "https://github.com/servo/core-foundation-rs", branch = "main"}

[target.'cfg(target_os="linux")'.dependencies]
xcb = { version = "1", features = ["randr", "shm"]}

[dev-dependencies]
repng = "0.2"
